--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+.wrapper{
+  width: 100vw;
+  height: 100vh;
+  background-color: #343334;
+  font-size: 2rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{ 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 1rem;
+
+}
+
+.new-item-form{
+  display: flex;
+  flex-direction: column;
+}
+
+.form-row{
+  display: flex;
+  flex-direction: column;
+}
+
+.inputArea{
+  background-color: #026598;
+  margin: 1rem 0;
+  height: 2rem;
+  font-size: 2remgit;
+}
+
+.btn{
+  background-color: #2F3F48;
+  border: 3px solid #026598;
+  height: 2rem;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color:#026598 ;
+}
+.btn:hover{
+  border: 4px solid #026598 ;
+  font-size: 1.4rem;
+}
+
+label{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.btn-danger{
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: red;
+  border:1px solid red;
+  background-color: #343334;
+  margin-left: .5rem;
+  cursor: pointer;
+  border-radius: 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list{
+  list-style: none;
+}
+li{
+  font-size: 2rem;
+}
+h1{
+  margin-bottom: 0;
+  color: white;
+}
+.box{
+  border-radius: 5px;
+  height: 1rem;
+  width: 1rem;
 }
